<resources>
    <string name="app_name">A2A Chat App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">home fragment</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_new_member">New member?</string>
    <string name="text_signup"><u>Sign up</u></string>
    <string name="text_create_account">Create an account</string>
    <string name="text_name">Name<font color='#DA0404'>*</font></string>
    <string name="text_email">Email<font color='#DA0404'>*</font></string>
    <string name="text_password">Password<font color='#DA0404'>*</font></string>
    <string name="text_phone">Phone number<font color='#DA0404'>*</font></string>
    <string name="text_whatsapp">Whatsapp number<font color='#DA0404'>*</font></string>
    <string name="text_signup_as">Sign up as<font color='#DA0404'>*</font></string>
    <string name="text_company">Company name (Optional)</string>
    <string name="text_select_option">Select option</string>
    <string name="text_next">Next</string>
</resources>