<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bg_splash" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_130sdp"
            app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_white" />

        <EditText
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:background="@drawable/bg_text_view_login"
            android:drawablePadding="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_8sdp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="@dimen/_13ssp"
            app:drawableStartCompat="@drawable/ic_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_text_view_login"
            android:drawablePadding="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_8sdp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="@dimen/_13ssp"
            app:drawableStartCompat="@drawable/ic_lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_27sdp"
            android:background="@drawable/bg_btn_login"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/text_login"
            android:textColor="#352049"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <TextView
            android:id="@+id/tv_new_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/text_new_member"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toStartOf="@+id/tv_sign_up"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="@dimen/_18sdp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/text_signup"
            android:textColor="#FD7B01"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_new_member"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tv_sign_up, tv_new_member" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>