<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SignupFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bg_signup" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:padding="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/text_create_account"
            android:textColor="#000000"
            android:textSize="@dimen/_18ssp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_create_account">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_15sdp">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/text_name"
                    android:textColor="#3C1663"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/bg_text_view_signup"
                    android:drawablePadding="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textColor="#3C1663"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/text_email"
                    android:textColor="#3C1663"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_name" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/bg_text_view_signup"
                    android:drawablePadding="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textColor="#3C1663"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email" />

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/text_password"
                    android:textColor="#3C1663"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_email" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/bg_text_view_signup"
                    android:drawablePadding="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textColor="#3C1663"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_password" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/text_phone"
                    android:textColor="#3C1663"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_password" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/bg_text_view_signup"
                    android:drawablePadding="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textColor="#3C1663"
                    android:textSize="@dimen/_13ssp"
                    android:maxLength="13"
                    android:drawableStart="@drawable/ic_uae"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

                <TextView
                    android:id="@+id/tv_whatsapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/text_whatsapp"
                    android:textColor="#3C1663"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_phone" />

                <EditText
                    android:id="@+id/et_whatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/bg_text_view_signup"
                    android:drawablePadding="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textColor="#3C1663"
                    android:textSize="@dimen/_13ssp"
                    android:maxLength="13"
                    android:drawableStart="@drawable/ic_whatsapp_green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_whatsapp" />

                <TextView
                    android:id="@+id/tv_signup_as"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/text_signup_as"
                    android:textColor="#3C1663"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_whatsapp" />

                <Spinner
                    android:id="@+id/spinner_user_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/bg_text_view_signup"
                    android:spinnerMode="dropdown"
                    tools:listitem="@layout/item_user_category_spinner"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_signup_as"
                    />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/text_company"
                    android:textColor="#3C1663"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spinner_user_type" />

                <EditText
                    android:id="@+id/et_company"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/bg_text_view_signup"
                    android:drawablePadding="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textColor="#3C1663"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_company" />

                <TextView
                    android:id="@+id/btn_next"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_38sdp"
                    android:background="@drawable/bg_btn_login"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/text_next"
                    android:textColor="#352049"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_company" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>